@@ -10,15 +10,18 @@ import java.util.concurrent.TimeUnit;
 public class Client2 {
 
 	public static void main(String[] args) throws IOException {
-
-		String currentPath = new java.io.File(".").getCanonicalPath();
-		 System.out.println("Current dir:" + currentPath);
+		//runSerachScript();
+		//runClient();
+		runClientinfoScript();
+	}
+	public static void runClient() throws IOException {
+		
 		Socket client = null;
 		BufferedReader from_server = null;
 		PrintWriter to_server = null;
 
 		String serverInput, userInput;
-		runSerachScript();
+		//runSerachScript();
 
 		try {
 
@@ -30,23 +33,33 @@ public class Client2 {
 
 			runSerachScript();
 			runClientinfoScript();
+			
 
 			while (true) {
-				serverInput = from_server.readLine();
-				// if the server receives done just break from this loop
-				if (serverInput.equals("done") || serverInput == null) {
-					System.out.println(serverInput);
-					break;
-				}
-				// print server input
-				System.out.println(serverInput);
-				// get user input and send it to the server
+				to_server.println("Systeminfo");
 				to_server.flush();
+				serverInput = from_server.readLine();
+				
+				// if the server receives done just break from this loop
+				while (!(serverInput.equals("done") || serverInput == null)){
+					System.out.println(serverInput);
+					serverInput = from_server.readLine();
+					
+				}
+				//wating for 5 min
+				TimeUnit.MINUTES.sleep(5);
+				
+				
+				 
+				
 
 			} // end of the loop
 
 		} catch (IOException ioe) {
 			System.out.println("Error" + ioe);
+		} catch (InterruptedException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
 		} finally {
 			try {
 				if (from_server != null)
@@ -64,7 +77,7 @@ public class Client2 {
 
 	private static void runSerachScript() {
 		try {
-			Process pro = Runtime.getRuntime().exec("scripts/Search.sh");
+			Process pro = Runtime.getRuntime().exec("scripts/Search.sh " );
 			BufferedReader search_output = new BufferedReader(new InputStreamReader(pro.getInputStream()));
 			String line = search_output.readLine();
 
@@ -73,6 +86,16 @@ public class Client2 {
 				line = search_output.readLine();
 			}
 			pro.waitFor(1, TimeUnit.MINUTES);
+			Process bigFilePro = Runtime.getRuntime().exec("cat bigfile.txt " );
+			BufferedReader bigFile_output = new BufferedReader(new InputStreamReader(bigFilePro.getInputStream()));
+			String line2 = bigFile_output.readLine();
+
+			while (line2 != null) {
+				System.out.println(line2);
+				line2 = bigFile_output.readLine();
+			}
+			
+			
 
 		} catch (IOException e) {
 			e.printStackTrace();
@@ -83,7 +106,11 @@ public class Client2 {
 
 	private static void runClientinfoScript() {
 		try {
-			Process pro = Runtime.getRuntime().exec("scripts/Clientinfo.sh");
+			ProcessBuilder pb = new ProcessBuilder("scripts/Clientinfo.sh");
+			pb.redirectErrorStream(true);
+			
+			//Process pro = Runtime.getRuntime().exec("scripts/Clientinfo.sh");
+			Process pro = pb.start();
 			BufferedReader search_output = new BufferedReader(new InputStreamReader(pro.getInputStream()));
 			String line = search_output.readLine();
 
@@ -91,7 +118,7 @@ public class Client2 {
 				System.out.println(line);
 				line = search_output.readLine();
 			}
-			pro.waitFor(1, TimeUnit.MINUTES);
+			pro.waitFor(10, TimeUnit.SECONDS);
 
 		} catch (IOException e) {
 			e.printStackTrace();
